Adding DLLInjector submodule. This code injects a DLL file into a running process on windows.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "EnvironmentVariables"]
 	path = EnvironmentVariables
 	url = https://github.com/ughstudios/EnvironmentVariables.git
+[submodule "DLLInjector"]
+	path = DLLInjector
+	url = https://github.com/ughstudios/DLLInjector.git
