Added my fork of the qtutils module which adds support for PySide6.

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "DLLInjector"]
 	path = DLLInjector
 	url = https://github.com/ughstudios/DLLInjector.git
+[submodule "qtutils"]
+	path = qtutils
+	url = https://github.com/ughstudios/qtutils.git
