Adding my own continuous integration system to the my_projects, this is going to remain hidden.

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "qtutils"]
 	path = qtutils
 	url = https://github.com/ughstudios/qtutils.git
+[submodule "myci"]
+	path = myci
+	url = https://github.com/ughstudios/myci.git
